--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
    <div class="slider">
       <ul class="slides">
          <li>
-            <img src="img/gbr1.jpg"> <!-- random image -->
+            <img src="Img/gbr1.jpg"> <!-- random image -->
             <div class="caption right-align">
             <h3>Halloo,duniaa!!!</h3>
             <h5 class="light grey-text text-lighten-3">Assalamu'alaikum Warohmatullahi Wabarokaatuh</h5>
             </div>
          </li>
          <li>
-            <img src="img/gbr4.jpg"> <!-- random image -->
+            <img src="Img/gbr4.jpg"> <!-- random image -->
             <div class="caption center-align">
             <h3>Tiga sekawan yang masih tetap harmonis sampai saat ini</h3>
             <h5 class="light grey-text text-lighten-3">Admin(Samsul Fauzi),Rendi Apriandhi dan Nedi Septiandi</h5>
             </div>
          </li>
          <li>
-            <img src="img/gbr5.jpg"> <!-- random image -->
+            <img src="Img/gbr5.jpg"> <!-- random image -->
             <div class="caption left-align">
             <h3>Pemuda</h3>
             <h5 class="light grey-text text-lighten-3">Yang mempunyai semangat untuk menjadi lebih baik dan bermanfaat kelak di kampung halaman untuk wilayah kecilnya dan isya Allah bisa berguna bagi Nusa dan Bangsa</h5>
             </div>
          </li>
          <li>
-            <img src="img/gbr6.jpg"> <!-- random image -->
+            <img src="Img/gbr6.jpg"> <!-- random image -->
             <div class="caption center-align">
             <h3>Seorang mahasiswa</h3>
             <h5 class="light grey-text text-lighten-3">Yang Berbeda universitas namun tetap pada tujuan bersama untuk membangun khususnya desa tempat tinggal kami</h5>
             </div>
          </li>
          <li>
-            <img src="img/gbr1.jpg"> <!-- random image -->
+            <img src="Img/gbr1.jpg"> <!-- random image -->
             <div class="caption right-align">
             <h3>Teknologi Informasi</h3>
             <h5 class="light grey-text text-lighten-3">Dengan Mengembangkan teknologi Informasi yang Bisa memudahkan dalam Segala hal Aktivitas Yang dilakasanakan secara Rutinitas</h5>
             </div>
          </li>
          <li>
-            <img src="img/gbr7.jpg"> <!-- random image -->
+            <img src="Img/gbr7.jpg"> <!-- random image -->
             <div class="caption left-align">
             <h3>Mimpi</h3>
             <h5 class="light grey-text text-lighten-3">Iya Itulah Mimpi saya yang Mudah-mudahan bisa kenyataan...Hehehe</h5>
@@ -145,35 +145,35 @@
     <!-- protfolio -->
     <section class="portfolio scrollspy" id="portfolio">
       <div class="parallax-container portfolio ">
-        <div class="parallax"><img src="img/bg9.jpg"></div>
+        <div class="parallax"><img src="Img/bg9.jpg"></div>
         <h2 class="center light white-text">Portfolio</h2>
         <br><br>
         <div class="row">
           <div class="col m3 s12">
-              <img src="img/gbr1.jpg" class="responsive-img materialboxed" data-caption="Admin yang selalu Alone">
+              <img src="Img/gbr1.jpg" class="responsive-img materialboxed" data-caption="Admin yang selalu Alone">
           </div>
           <div class="col m3 s12">
-              <img src="img/gbr2.jpg" class="responsive-img materialboxed" data-caption="Masa Dimana Kami mengenal Apa itu Cinta">
+              <img src="Img/gbr2.jpg" class="responsive-img materialboxed" data-caption="Masa Dimana Kami mengenal Apa itu Cinta">
           </div>
           <div class="col m3 s12">
-              <img src="img/gbr3.jpg" class="responsive-img materialboxed"data-caption="Admin Kece">
+              <img src="Img/gbr3.jpg" class="responsive-img materialboxed"data-caption="Admin Kece">
           </div>
           <div class="col m3 s12">
-              <img src="img/gbr4.jpg" class="responsive-img materialboxed"data-caption="Masa Dimana Kami Mulai memikirkan Nanti Nikah Sama siapa ? wkwkwk">
+              <img src="Img/gbr4.jpg" class="responsive-img materialboxed"data-caption="Masa Dimana Kami Mulai memikirkan Nanti Nikah Sama siapa ? wkwkwk">
           </div>
         </div>
         <div class="row">
             <div class="col m3 s12">
-                <img src="img/gbr5.jpg" class="responsive-img materialboxed" data-caption="Masih Tetap Bersama">
+                <img src="Img/gbr5.jpg" class="responsive-img materialboxed" data-caption="Masih Tetap Bersama">
             </div>
             <div class="col m3 s12">
-                <img src="img/gbr6.jpg" class="responsive-img materialboxed" data-caption="Cieee.. Yang lagi Menatap Masa Depan, Katanya">
+                <img src="Img/gbr6.jpg" class="responsive-img materialboxed" data-caption="Cieee.. Yang lagi Menatap Masa Depan, Katanya">
             </div>
             <div class="col m3 s12">
-                <img src="img/gbr7.jpg" class="responsive-img materialboxed"data-caption="Katanya Sih lagi Memandang Masa depan Kita berdua... Heehe">
+                <img src="Img/gbr7.jpg" class="responsive-img materialboxed"data-caption="Katanya Sih lagi Memandang Masa depan Kita berdua... Heehe">
             </div>
             <div class="col m3 s12">
-                <img src="img/gbr8.jpg" class="responsive-img materialboxed"data-caption="Admin Ganteng Haqiqi">
+                <img src="Img/gbr8.jpg" class="responsive-img materialboxed"data-caption="Admin Ganteng Haqiqi">
             </div>
           </div>
       </div>
