--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <li><a href="#about">About Me</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#contact">Contact Me</a></li>
-                  <li><a href="#">My Blog</a></li>
+                  <li><a href="https://pamoeda-coding.blogspot.com">My Blog</a></li>
                </ul>
              </div>
          </div>         
