--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
              <br>
              Wassalamu'alaikum Warohmatullahi Wabarokaatuh
            </p>
-           <a class="waves-effect waves-light btn blue">Klik Me</a>
+           <a href="https://drive.google.com/file/d/1FQRWk8hWRCcWvLyIx1JBCghe8eAnZjAF/view?usp=drivesdk"class="waves-effect waves-light btn blue">Klik Me</a>
            <br><br><br>
          </div>        
          <div class="col m6 s12">
