--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Aloel-Safzi | Unpam</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-4753519503816614",
+          enable_page_level_ads: true
+
+      });
+     </script>
   </head>
    
   <body id ="home" class ="scrollspy">
@@ -42,6 +50,10 @@
       <li><a href="https://pamoeda-coding.blogspot.com">My Blog</a></li>
    </ul>
    <!-- akhir sidenav -->
+    
+    <amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4753519503816614">
+    </amp-auto-ads>
 
    <!-- slider -->
    <div class="slider">
