--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
             <div class="col m3 push-m5 s4 push-s4 ">
               <h5 class="white-text">Sosial Media</h5>
               <ul class="light">
-                <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Youtube</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Github</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/syamsul.fzi">Facebook</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/pamoeda_coding/">Instagram</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://www.youtube.com/channel/UCM_UPioeTJO2pXJthP5cXBg">Youtube</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://github.com/aloelsafzi">Github</a></li>
               </ul>
             </div>
           </div>
