--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li><a href="#about">About Me</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#contact">Contact Me</a></li>
-                  <li><a href="https://pamoeda-coding.blogspot.com">My Blog</a></li>
+                  <li><a href="https://pamoedacoding.blogspot.com">My Blog</a></li>
                </ul>
              </div>
          </div>         
